# Mini-CDSS-v2.0_Backend

./: .env  .env.example  .gitignore  pyproject.toml
app/: main.py
app/ai/: diagnosis.py  differential.py  evidence.py  prompts.py  sessions.py
app/api/: doctors.py  sessions.py  wsDashboard.py
app/core/: config.py  security.py  setup.py
app/db/: client.py  collections.py  health.py
app/llm/: builder.py
app/models/: doctors.py  error.py  graph.py  patients.py  sessions.py  shared.py  socket.py
app/redis/: client.py  health.py
app/repositories/: doctors.py  patients.py  sessions.py
app/services/: doctors.py  sessions.py  wsConnectionManger.py
app/workflow/: graph.py
